# shadlab-utils

./: LICENSE  README.md  __init__.py  compute_calibration_matrix.py  extract_cell_metadata.py  histdiff.py  load_eye_traces.py  load_session.py  pyproject.toml  requirements.txt  spike_time_to_ifr.py  spike_time_to_pth.py
src/shadlabutils/: constants.py  histdiff.py  quicksort.py
src/shadlabutils/dataload/: extract_cell_metadata.py  load_cell.py  load_session.py  load_tongue_traces.py
