[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shadlabutils"
version = "0.1.0"
description = "Shared utilities used for neural/behavioral analysis in jhu motor lab (shadmehr lab)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Mohammad Reza Heydari" }
]
dependencies = [
    "numpy>=2",
    "pandas>=3",
    "scipy",
    "scikit-learn",
    "mat73",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]